--- a/requirements.txt
+++ b/requirements.txt
@@ -47,8 +47,10 @@ MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 nest-asyncio==1.6.0
+numpy==2.3.1
 orjson==3.10.18
 packaging==24.2
+pandas==2.3.1
 parso==0.8.4
 platformdirs==4.3.8
 prompt_toolkit==3.0.51
@@ -64,6 +66,7 @@ Pygments==2.19.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+pytz==2025.2
 pywin32==311
 PyYAML==6.0.2
 pyzmq==27.0.0
@@ -86,6 +89,7 @@ traitlets==5.14.3
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 watchfiles==1.1.0
